     - Fix GoToLinkOrStyle to work on css link tags in head
     - Fix logic in GoToLinkOrStyle to better identify the actual target with styles
     - Fix insert media file when cursor at very start of tag
     - Fix Windows and macOS bugs when generating Keyboard Shortcuts
     - Fix insert closing tag when cursor at very start of tag
     - Fix double copy to Clipboard from OPF and NCX Tabs

    New Features:
     - BookBrowser can now link javascripts similarly to how it links stylesheets
     - Epub3 javascripts can now open windows if javascript is enabled
     - Add Find and Replace context menu to clear its curent values and history
     - Add support for 3 Automation lists that support editing and automatically running a list of
         commands that can include all Sigil plugins and a limited set of Tools
     - Add support for BookBrowser to insert a blank javascript file
     - Do not require replacement prompt if current book is unmodified and input plugin is run


Sigil-1.7.0
    Bug Fixes
     - Workaround to ensure the Saved Searches Controls editor widget is movable on all platforms
     - Make the External Xhtml Editor Button/Feature work with both PageEdit and non-PageEdit editors again
     - Fix Preview sync when CV transitions from xhtml to css and back to xhtml
     - Fix Preview sync when Find and Replace opens new tab with search target
     - Fix Preview sync when Validation error clicked on
     - Fix Preview sync when mathml is being used (compensate for mathjax changes)
     - Fix mathml use when external MathJax directory is specified in builds on Linux
     - Prevent Sigil from loading any manifested mimtype file from bad epubs, give load warning
     - Make Spellcheck dialog use double-click to control search in CV, to speed paging word list.
     - Prevent duplicate translated semantic names
     - Fix heading tool issues after self-closed BLOCK tags